--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,15 @@ server.port=9000
 #Log configuration
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
-logging.level.com.adrar.api=DEBUG
+logging.level.com.adrar.cdafad=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.adrar.api.filter=DEBUG
 
 #H2 configuration
 spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:./src/main/resources/db/test
+spring.datasource.username=sa
+spring.datasource.password=toto
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
